--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+### Ruby template
 *.gem
 *.rbc
 /.config
@@ -10,24 +11,10 @@
 /test/version_tmp/
 /tmp/
 
-# Used by dotenv library to load environment variables.
-# .env
-
 ## Specific to RubyMotion:
 .dat*
 .repl_history
 build/
-*.bridgesupport
-build-iPhoneOS/
-build-iPhoneSimulator/
-
-## Specific to RubyMotion (use of CocoaPods):
-#
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
-#
-# vendor/Pods/
 
 ## Documentation cache and generated files:
 /.yardoc/
@@ -35,7 +22,7 @@ build-iPhoneSimulator/
 /doc/
 /rdoc/
 
-## Environment normalization:
+## Environment normalisation:
 /.bundle/
 /vendor/bundle
 /lib/bundler/man/
@@ -48,3 +35,7 @@ build-iPhoneSimulator/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+# Created by .ignore support plugin (hsz.mobi)
+
+.idea
